# operator-console

./: .gitignore  Cargo.toml  README.md
fixtures/: exchange_panel_snapshot.json
src/: agent_browser.rs  alerts.rs  app.rs  app_state.rs  backend_provider.rs  calculator.rs  domain.rs  exchange_api.rs  horse_matcher.rs  lib.rs  main.rs  manual_positions.rs  market_normalization.rs  native_provider.rs  native_trading.rs  oddsmatcher.rs  owls.rs  provider.rs  recorder.rs  resource_state.rs  runtime.rs  snapshot_projection.rs  stub_provider.rs  theme.rs  tracing_setup.rs  trading_actions.rs  transport.rs  ui.rs  wm.rs  worker_client.rs
src/market_intel/: mod.rs  models.rs
src/panels/: alerts.rs  calculator.rs  chart.rs  dashboard.rs  exchanges.rs  horse_matcher.rs  intel.rs  matcher.rs  mod.rs  observability.rs  oddsmatcher.rs  recorder.rs  trading_action_overlay.rs  trading_markets.rs  trading_positions.rs  trading_stats.rs
tests/: alerts_panel.rs  app_state.rs  async_resource_state.rs  calculator_panel.rs  exchange_provider_contract.rs  exchanges_panel.rs  help_footer.rs  horse_matcher_panel.rs  live_operator_smoke.rs  native_provider.rs  navigation.rs  oddsmatcher_panel.rs  operator_workflows.rs  persistent_worker_client.rs  provider_contract.rs  recorder_config_persistence.rs  recorder_controls.rs  recorder_process_supervisor.rs  recorder_startup_retry.rs  stub_provider.rs  trading_panel_ui.rs  worker_backed_provider.rs  worker_client.rs  worker_failure_ui.rs
