[package]
name = "operator-console"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
